--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "A minimal Node.js web application.",
   "main": "app.js",
+  "type": "module",
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "discord.js": "^14.15.3",
+    "node-fetch": "^3.3.2"
   },
   "scripts": {
     "start": "node app.js"
